alignment fixes

--- a/src/styles/currencyDropdown.css
+++ b/src/styles/currencyDropdown.css
@@ -33,7 +33,7 @@
 
 .currency-dropdown-button {
   display: flex;
-  justify-content: flex-start;
+  justify-content: flex-end;
 }
 
 .custom-select {
