--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -13,6 +13,10 @@ body {
   margin: 40px;
   padding: 20px;
   background-color: var(--background);
+  max-width: 1300px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 /* Fix for Last Page Shift */
