--- a/src/styles/table.css
+++ b/src/styles/table.css
@@ -1,5 +1,7 @@
 .table-wrapper {
   display: flex;
+  padding: 20px;
+  gap: 30px;
 }
 
 .table-card-wrapper {
@@ -15,7 +17,7 @@
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
   border-radius: 10px;
   padding: 20px;
-  max-width: 650px;
+  /* max-width: 650px; */
   height: 340px;
 }
 
@@ -74,4 +76,9 @@ tr:nth-child(even) {
 
 .sort-btn:hover::after {
   opacity: 0.7;
+}
+
+.th-title {
+  gap: 8px;
+  display: flex;
 }
