--- a/src/styles/tooltip.css
+++ b/src/styles/tooltip.css
@@ -2,6 +2,8 @@
   position: relative;
   display: inline-block;
   cursor: pointer;
+  display: flex;
+  align-items: center;
 }
 
 .tooltip {
